--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "0BSD",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.3",
     "gatsby": "^2.26.1",
