--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.3",
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.8.0",
     "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-remark": "^2.13.0",
+    "gatsby-transformer-sharp": "^2.9.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
